cmake_minimum_required(VERSION 3.8)
project(imgui-sfml VERSION 1.0)

set(CMAKE_CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED ON)

set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
set(CMAKE_DISABLE_SOURCE_CHANGES  ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS OFF)

if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
  message(SEND_ERROR "In-source builds are not allowed.")
endif ()

set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_COLOR_MAKEFILE ON)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")

find_package(OpenGL REQUIRED)
find_package(SFML 2.1 COMPONENTS graphics window system)

file(GLOB IMGUI_SFML_SOURCES "${PROJECT_SOURCE_DIR}/*.cpp" "${PROJECT_SOURCE_DIR}/*.h")

message(STATUS "SFML include directories: ${SFML_INCLUDE_DIR}")
message(STATUS "SFML dependencies: ${SFML_DEPENDENCIES}")
message(STATUS "SFML libraries: ${SFML_LIBRARIES}")

include_directories(
  ${PROJECT_SOURCE_DIR}
  ${SFML_INCLUDE_DIR}
)

set(IMGUI_SFML_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}"
    CACHE INTERNAL "IMGUI_SFML_INCLUDE_DIRS")

add_library(${PROJECT_NAME} ${IMGUI_SFML_SOURCES})
target_link_libraries(${PROJECT_NAME}
  ${OPENGL_LIBRARIES}
  ${SFML_DEPENDENCIES}
  ${SFML_LIBRARIES}
)
